# Foxotron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_all.bat  config.json  file_id.diz
.github/workflows/: build_release.yml  main.yml
Shaders/: basic_specgloss.fs  basic_specgloss.vs  basic_specgloss_ibl.fs  basic_specgloss_ibl.vs  pbr.fs  pbr.vs
Skyboxes/: skysphere.fs  skysphere.vs
data/windows/: SetupDialog.rc  resource.h
src/: Geometry.cpp  Geometry.h  Main.cpp  Renderer.cpp  Renderer.h  SetupDialog.h
src/platform_common/: SetupDialog.cpp
src/platform_w32/: SetupDialog.cpp
